--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 name = "linear-deque"
 version = "0.1.0"
 edition = "2021"
+description = "A double-ended queue that can be sliced at any time without preparation."
+authors = ["Eduardo R. D'Avila <erdavila@gmail.com>"]
+repository = "https://github.com/erdavila/linear-deque-rs"
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
